# ninja-move

./: .gitignore  config-redpanda.yaml  docker-compose.local.yml  readme.md
core/: .env.example  docker-compose.local.yml  makefile
core-rs/: .env.example  .gitignore  2top-bot-architecture.psd  Cargo.toml  makefile  queries.sql
core-rs/benches/: time_millis.rs
core-rs/examples/: log_dynamic.rs  log_to_file.rs  place_bybit_market_order.rs
core-rs/src/: constants.rs  lib.rs
core-rs/src/domain/: binance.rs  bybit.rs  gateio.rs  mod.rs
core-rs/src/port/: la.rs  mod.rs  two_top_intersects.rs
core-rs/src/repository/: monitoring.rs  queue.rs
core/docs/: monitor-spreads.sql
core/notebooks/: monitor.ipynb
exchanges-arbitrage/: .env.example  .gitignore  dockerfile.busybox
exchanges-arbitrage/docs/: notes.sql
exchanges-arbitrage/src/: constants.rs
jupy/: docker-compose.local.yml  dockerfile.jupyterhub  shared.py
jupy/notebooks/: backtest_weekends_pumps_dumps_on_2024_03_30.ipynb  calc_bull_market_btc_pull_backs.ipynb  calc_double_top.ipynb  calc_double_tops.ipynb  calc_indicators.ipynb  download_binance_klines.ipynb  draw_matic_plot.ipynb  draw_strategies.ipynb  draw_times_ranges.ipynb  shared.py  t.ipynb  trade_2top_intersects.ipynb
logger/: .gitignore  Cargo.toml  log4rs.yml
logger/examples/: log_dynamic.rs  log_to_file.rs
logger/src/: lib.rs  main.rs
logger/tests/: intergration_add.rs
scripts/: collect_borrowing_rates.py  collect_cme.py  requirements  shared.py
triangle-arbitrage/: .dockerignore  .env.example  .env.heavy_crypto_binance  .env.heavy_crypto_binance.example  .env.look_on_bybit  .env.look_on_bybit.example  .gitignore  calc_all_ways.py  dockerfile.busybox  heavy_crypto_binance.py  makefile  requirements  run.py
triangle-arbitrage-binance/: arbitrage.js
triangle-arbitrage-heavycrypto-py/: dockerfile.busybox
triangle-arbitrage/src/: common.py  (+2 more)
(+12 files in other folders)
