[package]
name = "exchanges-arbitrage"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "limit_market_v1"
path = "src/bin/limit_market_v1.rs"

[[bench]]
name = "time_millis"
harness = false

[dependencies]
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
tungstenite = { version="0.19.0", features = ["native-tls"] }
async-tungstenite = { version = "*", features = ["async-tls", "tokio-native-tls", "tokio-openssl"] }
url = "2.4.0"
serde = { version = "1.0.170", features = ["derive"] }
serde_json = "1.0.100"
prettytable-rs = "0.10"
postgres = "0.19.5"
chrono = "0.4.26"
kafka = "0.9"
log = "0.4.19"
env_logger = "0.10.0"
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10.7"
hmac = "0.12.1"
hex = "0.4.3"
ctrlc = "3.4.0"
futures = "0.3"
tokio = { version = "1.29.1", features = ["full"] }
log4rs = "1.2.0"
byte-unit = "4.0.19"
uuid = { version = "1.7.0", features = ["v4"] }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
